2008-07-25  Alberto Garcia  <agarcia@igalia.com>

	* po/fi.po, po/pt.po: Add missing ellipsis

2008-07-23  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c
	(lastfm_usercfg_read, lastfm_usercfg_write, get_cfg_filename)
	(xml_get_bool, xml_get_string, xml_add_bool, xml_add_string):
	New, XML-based configuration file. The old file is converted to
	the new one and deleted if necessary.
	(lastfm_old_usercfg_read, get_old_cfg_filename):
	Legacy functions to read the old configuration file.

	* src/util.h
	* src/util.c (obfuscate_string): New function to obfuscate
	strings. Used for passwords in the new config file.

	* configure.ac
	* data/vagalume-rfs.sh.in
	* data/vagalume.conf.in: Replace config file with config dir.

	* vagalume.1: Update location of the config file.

2008-07-22  Alberto Garcia  <agarcia@igalia.com>

	* scripts/vagalumectl: Renamed 'tag' to 'globaltag'

2008-07-15  Alberto Garcia  <agarcia@igalia.com>

	* po/de.po, po/es.po, po/fi.po, po/fr.po, po/gl.po, po/it.po
	* po/lv.po, po/pt.po, po/pt_BR.po, po/vagalume.pot
	* src/vgl-main-window.c: Updated translation string

	* po/es.po: Updated Spanish translation (by Oscar Mata).

2008-07-10  Alberto Garcia  <agarcia@igalia.com>

	* po/fi.po: Minor translation fixes.

	* src/dbus.h
	* src/dbus.c
	(lastfm_dbus_init):
	Return a different value if Vagalume is already running.
	(lastfm_dbus_play_radio_url):
	New function to change the current radio station of a running
	instance.

	* src/controller.c (controller_run_app):
	If you run vagalume from the command line and it is already
	running, change the current radio station.

	* debian/gconf-defaults:
	Use vagalume instead of vagalumectl to handle lastfm:// URLs.

	* TODO: Remove things that have already been implemented.

2008-07-07  Alberto Garcia  <agarcia@igalia.com>

	* po/fr.po: Updated French translation (by Julien Duponchelle)

	* po/pt_BR.po: Updated Brazilian Portuguese translation (by
	Rodrigo Flores)
