@@ -45,7 +45,7 @@ Mark the current song as 'loved'.
 .B ban
 Mark the current song as 'banned' and skip to the next one.
 .TP
-.BI tag "\| tag\^"
+.BI globaltag "\| tag\^"
 Play a 'global tag' radio.
 .TP
 .BI artist "\| artist\^"
@@ -60,8 +60,8 @@ Play a user's 'loved tracks' radio.
 .BI neighbours "\| user\^"
 Play a user's 'neighbours' radio.
 .TP
-.BI personal "\| user\^"
-Play a user's 'personal' radio.
+.BI library "\| user\^"
+Play a user's library
 .TP
 .BI playlist "\| user\^"
 Play a user's playlist.
